--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
     <video controls width="400" height="400"
       >
         <source src="sintel-short.mp4" type="video/mp4">
-            <track kind="captions" src="sintel-en.vtt" srclang="en" default>
+            <track kind="subtitles" src="sintel-en.vtt" srclang="en" default>
             <p>Your browser doesn't support HTML5 video. Here is a <a href="sintel-short.mp4">link to the video</a> instead.</p>
     </video>
 </body>
